k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: shopmicro
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:

      nodeSelector:
        workload: backend

      tolerations:
        - key: "workload"
          operator: "Equal"
          value: "backend"
          effect: "NoSchedule"

      affinity:        
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - backend
              topologyKey: "kubernetes.io/hostname"

      containers:
        - name: backend
          image: 307946680662.dkr.ecr.us-west-2.amazonaws.com/backend:latest
          ports:
            - containerPort: 8080
