k8s/ml-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-service
  namespace: shopmicro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ml-service
  template:
    metadata:
      labels:
        app: ml-service
    spec:
      containers:
        - name: ml-service
          image: 307946680662.dkr.ecr.us-west-2.amazonaws.com/ml-service:latest
          ports:
            - containerPort: 5000
