k8s/ml-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-service
  namespace: shopmicro
spec:
  selector:
    app: ml-service
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
